--- a/about.html
+++ b/about.html
@@ -62,8 +62,8 @@
       <p>
         We created <i>Hyperacusis Guide</i> to address the significant lack of reliable information 
         and the prevalence of misleading or incorrect guidance on the internet regarding 
-        severe hyperacusis. Many patients who are newly diagnosed — or who face a high risk 
-        of rapid worsening — struggle to find accurate, evidence-informed resources that help 
+        severe hyperacusis. Many patients who are newly diagnosed ─ or who face a high risk 
+        of rapid worsening ─ struggle to find accurate, evidence-informed resources that help 
         them understand their condition, manage symptoms safely, and make informed decisions 
         about treatment and daily life. 
       </p>
@@ -77,7 +77,7 @@
       </p>
 
       <p>
-      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> — This is our official server and the easiest way to reach us.
+      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> ─ This is our official server and the easiest way to reach us.
       </P>
     </article>
   </main>
