--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
   </p>
 
       <p>
-      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> — This is our official server and the easiest way to reach us.
+      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> ─ This is our official server and the easiest way to reach us.
       </P>
   </article>
   </main>
