--- a/imaging.html
+++ b/imaging.html
@@ -93,7 +93,7 @@
   <li>Multiplanar and 3D reconstructions aid assessment of ossicles, cochlea, semicircular canals, and mastoid air cells.</li>
   <li>Helps identify structural causes and supports both conservative and surgical management planning.</li>
 </ul>
-<i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis — ideally with expertise in the Silverstein Procedure.</i>
+<i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis ─ ideally with expertise in the Silverstein Procedure.</i>
     </article>
   </main>
 
