--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological ─ an impression often reinforced by misinformation found online. 
       </p>
       <p>
-      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences. No one else experiences your suffering firsthand.**
+      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (tinnitus retraining therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences. No one else experiences your suffering firsthand.**
       </i></strong>
       </p>
 
