--- a/medications.html
+++ b/medications.html
@@ -129,11 +129,25 @@
         abnormal sound perception or middle ear movement. 
       </p>
       <p>
-        In cases of MEM or TTTS—conditions characterized by involuntary 
-        contractions of the tensor tympani or stapedius muscles—botox injections have been used to reduce muscle hyperactivity 
-        and relieve the associated fluttering, thumping, or pressure sensations in the ear. The toxin is typically injected 
-        through the tympanic membrane or via a transcanal approach into the affected muscle under microscopic guidance. 
+        In cases of MEM or TTTS ─ conditions characterized by involuntary 
+        contractions of the tensor tympani or stapedius muscles ─ botox injections have been used to reduce muscle hyperactivity 
+        and relieve the associated fluttering, thumping, or pressure sensations in the ear. 
+        
+        </p>
+        <p>
+        The toxin is most commonly injected into the tensor veli palatini (TVP) muscle which is closely related to the tensor tympani muscle through a shared tendinous attachement.
+        In rare cases, the toxin is directly injected into the tensor tympani and stapedius muscles using a transcanal approach (through the tympanic membrane) under microscopic guidance.
       </p>
+
+       <p>
+        The video below demonstrates Botox being injected into the tensor veli palatini (TVP) using a transnasal endoscopic approach. You will notice the tip of the needle tip within the TVP muscle near the lower-left edge of the field of view. <a class="link" href="documents/tvp_botox_letter.pdf" target="_blank" rel="noopener noreferrer">A brief description of the technique can be found 
+here</a>. 
+      </p>
+
+      <video width="640" height="360" controls>
+  <source src="video/tvp_botox.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
       <p>
         In some reported cases, patients have experienced a significant reduction in middle ear spasms, sound sensitivity, 
         and pain following treatment, often lasting several months until the effects wear off.
@@ -149,9 +163,7 @@
         Botox treatment for hyperacusis and MEM/TTTS is therefore considered experimental, but may represent a 
         valuable option for patients with refractory symptoms not responsive to medication or sound therapy.
       </p>
-            <p>
-      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
-      </P>
+
     </article>
   </main>
   
