--- a/mem.html
+++ b/mem.html
@@ -116,6 +116,12 @@
       <li>Diagnosis is primarily clinical, based on symptoms and ruling out other ear disorders.</li>
     </ul>
 
+    <p>
+    <a class="link" href="https://drive.google.com/file/d/1bS_f919kmbgbfTjBa-xfWXOXR60Q5-x1/view?pli=1" target="_blank" 
+        rel="noopener noreferrer">
+    Here you will find an excellent article</a> describing acoustic shock and how it relates to the tensor tympani muscle (TTM). Key points within the article have been highlighted.
+    </p>
+
       <p>
         The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" 
         rel="noopener noreferrer">Tonic Tensor Tympani Syndrome (TTTS) Support Group</a> is a Facebook community with over 2300 members who share their experiences, discuss symptoms, and explore treatment options.
