--- a/tinnitus.html
+++ b/tinnitus.html
@@ -161,7 +161,7 @@
     <h1>Tinnitus Retraining Therapy (TRT)</h1>
 
     <p class="lead">
-      Tinnitus Retraining Therapy (TRT) is a structured approach designed to help 
+      Tinnitus retraining therapy (TRT) is a structured approach designed to help 
       individuals habituate to tinnitus and reduce its impact on daily life. Developed by <a class="link" href="https://www.pluralpublishing.com/author/pawel-j-jastreboff?srsltid=AfmBOoqFHye1HR7-vnnulHIxfvKqJhJyRzC23MXEl3E8BM3LJBKdejiD" target="_blank" 
         rel="noopener noreferrer">Dr. Pawel Jastreboff</a>, TRT combines <strong>counseling</strong> to reframe the perception of 
       tinnitus with <strong>sound therapy</strong> to promote auditory desensitization. The goal 
@@ -182,7 +182,7 @@
     </ul>
 
 <p class="lead">
-While Tinnitus Retraining Therapy (TRT) is widely used and promoted, there is currently 
+While tinnitus retraining therapy (TRT) is widely used and promoted, there is currently 
 <strong>limited scientific evidence</strong> to conclusively demonstrate its effectiveness. 
 Clinical studies have produced mixed results, and some reviews suggest that benefits may be 
 largely due to <strong>placebo effects, counseling support, or natural habituation</strong> 
@@ -217,14 +217,14 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
       <div class="page-break" aria-hidden="true"></div>
       <h1>On Dr. Pawel Jastreboff</h1>
 <p>
-  In 1988, Dr. Jastreboff developed the neurophysiological model of tinnitus and introduced Tinnitus Retraining Therapy (TRT), building on his research into the underlying physiological mechanisms of the condition. His 2004 textbook, 
+  In 1988, Dr. Jastreboff developed the neurophysiological model of tinnitus and introduced tinnitus retraining therapy (TRT), building on his research into the underlying physiological mechanisms of the condition. His 2004 textbook, 
   <a class="link" href="https://www.amazon.com/Tinnitus-Retraining-Therapy-Implementing-Neurophysiological/dp/0521088372" target="_blank" rel="noopener noreferrer"><i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i></a>
   (co-authored with Jonathan W. P. Hazell), outlined the principles of TRT and helped 
   popularize the neurophysiological model, though its clinical effectiveness remains 
   unsubstantiated by compelling evidence.
 </p>
 <p>
-Every member of the <i>Hyperacusis Guide</i> team suffers from varying degrees of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
+Every member of the <i>Hyperacusis Guide</i> team suffers from varying degrees of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of tinnitus retraining therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
 </p>
 
 <p>
@@ -252,7 +252,7 @@ The severity of hyperacusis and tinnitus cannot currently be measured through ob
 </p>
 
       <p>
-      For a clearer understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) ─ implying that they may have a hidden agenda such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
+      For a clearer understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to tinnitus retraining therapy (TRT) ─ implying that they may have a hidden agenda such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
         rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has caused lasting damage to the advancement of tinnitus and hyperacusis research.
       </p>
       <p>
