--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
     <button id="hamburger"><?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-<svg width="35px" height="35px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="32px" height="32px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
 <path d="M4 18L20 18" stroke="#e0e0e0" stroke-width="2" stroke-linecap="round"/>
 <path d="M4 12L20 12" stroke="#e0e0e0" stroke-width="2" stroke-linecap="round"/>
 <path d="M4 6L20 6" stroke="#e0e0e0" stroke-width="2" stroke-linecap="round"/>
@@ -71,7 +71,7 @@
       </p>
 
       <p>
-        However, our experience and case reviews suggest that even a mild case of hyperacusis can rapidly progress to a severe or catastrophic level if normal sound exposure is continued. We are aware of numerous individuals who were initially mildly affected, followed exposure therapy advice from Reddit and other sources, and subsequently became completely homebound, unable to work, and profoundly disabled by their condition. We believe that earlier sound isolation when symptoms are mild could have prevented this escalation in many cases.
+        However, our firsthand experience and case reviews suggest that even a mild case of hyperacusis can rapidly progress to a severe or catastrophic level if normal sound exposure is continued. We are aware of numerous individuals who were initially mildly affected, followed exposure therapy advice from Reddit and other sources, and subsequently became completely homebound, unable to work, and profoundly disabled by their condition. We believe that earlier sound isolation when symptoms are mild could have prevented this escalation in many cases.
       </p>
 
       <h2>Purpose</h2>
@@ -94,10 +94,10 @@
       </p>
 
       <p>
-      It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological ─ an impression often reinforced by misinformation found online. 
+      It is common for family members to urge you to seek treatment upon recognizing the extent of your difficulties. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological ─ an impression often reinforced by misinformation found online. 
       </p>
       <p>
-      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (tinnitus retraining therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences. No one else experiences your suffering firsthand.**
+      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (tinnitus retraining therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences. No one else will experience your suffering firsthand.**
       </i></strong>
       </p>
 
@@ -140,18 +140,17 @@
         <li>Minimize leaving home except for essential medical visits. <i>This precaution may be temporary but is important in the early phase to prevent irreversible setbacks.</i></li>
 
         <li>Arrange errands, deliveries, and communication so you can maintain a low-noise environment.</li>
+        <li>This will likely require you to stop working, at least temporarily, but it’s far better to take a planned break now than to risk worsening your condition and being forced to stop working due to an irreversible setback.</li>
       </ul>
 
       <h2>5. Diagnostic Imaging</h2>
       <ul>
-        <li>Schedule a high-resolution CT scan of the temporal bones with:</li>
+        <li>Schedule a high-resolution CT scan of the temporal bones (thin-cut protocol with &lt;= 0.6 mm slice thickness, non-contrast).</li>
+    
         <ul>
-          <li>&lt;= 0.6 mm slice thickness (thin-cut protocol).</li>
-          <li>Ensure both sides are imaged.</li>
-          
-        </ul>
         <li>Purpose: Rule out bony or structural causes (e.g., superior semicircular canal dehiscence syndrome) and evaluate surgical options.</li>
-        <i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis ─ ideally with expertise in the Silverstein Procedure.</i>
+        </ul>
+        <i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need to find, or be referred to, a highly-specialized ENT (otolaryngologist) or neurotologist with experience treating hyperacusis ─ ideally with expertise in the Silverstein Procedure.</i>
       </ul>
 
       <h2>6. Specialist Review</h2>
