--- a/tinnitus.html
+++ b/tinnitus.html
@@ -74,7 +74,7 @@
     </p>
 
     <p>
-Every member of the <i>Hyperacusis Guide</i> team experiences some degree of tinnitus ranging from mild to catastrophic. When tinnitus occurs alongside hyperacusis, it is often <strong>reactive tinnitus</strong>, meaning it intensifies immediately in response to sounds that exceed one’s tolerance threshold.
+Every member of the <i>Hyperacusis Guide</i> team experiences some degree of tinnitus ranging from mild to severely debilitating. When tinnitus occurs alongside hyperacusis, it is often <strong>reactive tinnitus</strong>, meaning it intensifies immediately in response to sounds that exceed one’s tolerance threshold.
 </p>
 
     <h2>Key Features</h2>
