--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -121,42 +121,34 @@ Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</st
 
   <div class="page-break" aria-hidden="true"></div>
       <h1>Hyperacusis Severity</h1>
-    <p>At <i>Hyperacusis Guide</i>, we recognized that there is currently no standardized severity scale for hyperacusis. To address this gap, we propose the following severity scale, designed to classify the condition more consistently, support clinical guidance, and enable the collection of more accurate data for research.
+    <p>At <i>Hyperacusis Guide</i>, we recognized that there is currently not a standardized severity scale for hyperacusis. To address this gap, we propose the following severity scale, designed to classify the condition more consistently, support clinical guidance, and enable the collection of more accurate data for research.
     </p>
 
     <p>
-  <!-- Row 1 -->
-<div class="responsive-table">
-  <div class="row">
-    <div class="row1 top-left"><strong>Severity</strong></div>
-    <div class="row1 top-right"><strong>Limitations</strong></div>
-  </div>
-  <div class="row">
-    <div class="row2"><strong>Mild</strong></div>
-    <div class="row2">
+
+<div class="table">
+  <div class="row1 top"><strong>Hyperacusis Severity Scale</strong></div>
+  <div class="row2">
+  <strong>Mild</strong>
     <ul>
     <li>Can generally function day-to-day with adaptations.</li>
     <li>Requires hearing protection in louder environments (e.g., restaurants, shopping, public events).</li>
     <li>Avoids certain activities that are uncomfortably loud.</li>
     <li>May still manage quiet activities or maintain a quiet job.</li>
     </ul>
-    </div>
   </div>
-  <div class="row">
-    <div class="row3"><strong>Moderate</strong></div>
-    <div class="row3">
+  <div class="row3">
+  <strong>Moderate</strong>
      <ul>
     <li>Symptoms interfere significantly with work and daily activities.</li>
     <li>May have to stop current employment or change to a low-noise job.</li>
     <li>Often makes a choice to be primarily homebound to not worsen, leaving mainly for doctor visits or necessities, which is something they still have tolerance for.</li>
     <li>Social activities and travel are very restricted.</li>
     <li>Hearing protection is needed for almost all situations outside the home.</li>
-    </ul>
-    </div>
+    </ul> 
   </div>
-  <div class="row">
-    <div class="row4"><strong>Severe</strong></div>
-    <div class="row4">
+  <div class="row4">
+  <strong>Severe</strong>
      <ul>
     <li>Unable to tolerate many ordinary sounds, often including normal conversation.</li>
     <li>Requires hearing protection for most things in and out of the home.</li>
@@ -164,19 +156,14 @@ Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</st
     <li>Homebound has become absolutely mandatory to not worsen.</li>
     <li>Those in this category do not leave home at all, or not for very long periods of time, and typically only in life-or-death or extremely pressing situations.</li>
     </ul>
-    </div>
   </div>
-  <div class="row">
-    <div class="row5 bottom-left"><strong>Catastrophic</strong></div>
-    <div class="row5 bottom-right">
+  <div class="row5 bottom">
+  <strong>Catastrophic</strong>  
      <ul>
-    <li>Encompasses everything in severe, but at a level beyond in both intensity and susceptibility to worsening.</li>
+    <li>Encompasses everything in the severe category, but at a level beyond in both intensity and susceptibility to worsening.</li>
     <li>Symptoms can be worsened by things as simple as whispering, eating, running water, or flushing toilets even in protection.</li>
     </ul>
   </div>
-  </div>
-
-  <!-- more rows -->
 </div>
 
 
