--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -39,12 +39,12 @@
     <h1 class="logo">
     <img src="logo.png" class="logo-image">
     Hyperacusis Guide</h1>
-    <button id="hamburger"><?xml version="1.0" encoding="utf-8"?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-<svg width="35px" height="35px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path d="M20 7L4 7" stroke="#e0e0e0" stroke-width="1.5" stroke-linecap="round"/>
-<path d="M20 12L4 12" stroke="#e0e0e0" stroke-width="1.5" stroke-linecap="round"/>
-<path d="M20 17L4 17" stroke="#e0e0e0" stroke-width="1.5" stroke-linecap="round"/>
-</svg></button>
+<button id="hamburger" aria-label="Menu">
+  <span></span>
+  <span></span>
+  <span></span>
+</button>
+
   </header>
 
   <nav id="sidebar">
