--- a/hyperacusis.html
+++ b/hyperacusis.html
@@ -80,20 +80,19 @@
   <p class="lead">
     The condition often follows acoustic trauma, prolonged noise exposure, otologic injury, or neurological dysfunction, and its severity can vary widely. 
     For many individuals, hyperacusis causes distress, anxiety, and social withdrawal as they attempt to avoid environments that provoke discomfort. 
-    Proper management focuses on protecting against harmful sound exposure while gradually reintroducing tolerable sounds in a controlled, stable environment to help restore auditory tolerance.
+    Proper management focuses on <strong>protecting against harmful sound exposure</strong> while gradually reintroducing tolerable sounds in a controlled, stable environment to help restore auditory tolerance.
   </p>
 
   <p>
     At <i>Hyperacusis Guide</i>, we have researched hundreds of patient cases and spent over a year 
-    directly communicating with individuals suffering from hyperacusis, noxacusis, and tinnitus to gather 
-    detailed information about their symptoms and experiences. Through this process, we’ve found that the 
-    <strong>current medical descriptions of hyperacusis and noxacusis lack clarity</strong>, and our observations indicate that these conditions appear 
-    to exist on the same spectrum. 
+    directly communicating with individuals suffering from hyperacusis, noxacusis (pain hyperacusis), and tinnitus to gather 
+    detailed information about their symptoms and experiences. Through this process, we observed that many individuals with hyperacusis, as well as researchers, tend to classify hyperacusis and noxacusis as distinct disorders. However, our findings suggest that these conditions likely exist along the same spectrum.
     
     
    <p>
 
 Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</strong>, in which normal environmental noises are perceived as uncomfortably loud, intrusive, or even painful. Noxacusis, by definition, refers to <strong>pain resulting from sound exposure that exceeds an individual’s tolerance level</strong>. In our experience, when hyperacusis becomes severe enough, pain nearly always develops as part of the condition ─ therefore, we see little reason to distinguish these two as separate disorders.
+<strong>Noxacusis is simply a more severe manifestation of hyperacusis, distinguished by the presence of pain in response to sound</strong>.
   </p>
 
   <p>
@@ -121,7 +120,8 @@ Hyperacusis is defined as an <strong>abnormal sensitivity to everyday sounds</st
 
   <div class="page-break" aria-hidden="true"></div>
       <h1>Hyperacusis Severity</h1>
-    <p>At <i>Hyperacusis Guide</i>, we recognized that there is currently not a standardized severity scale for hyperacusis. To address this gap, we propose the following severity scale, designed to classify the condition more consistently, support clinical guidance, and enable the collection of more accurate data for research.
+    <p>
+    At <i>Hyperacusis Guide</i>, we noted the lack of a standardized severity scale for hyperacusis.  To address this gap, we propose the following severity scale, intended to enable consistent classification, assist clinical management, and enhance the quality of data collected for research.
     </p>
 
     <p>
