--- a/silverstein.html
+++ b/silverstein.html
@@ -124,11 +124,16 @@ Locating a specialist qualified to perform the Silverstein Procedure can be chal
             <li><a class="link" href="https://michiganear.com/our-physicians/dennis-i-bojrab-m-d/" target="_blank" rel="noopener noreferrer">Dr. Dennis Bojrab Sr., MD</a> ─ Farmington Hills, MI</li>
             <li><a class="link" href="https://www.entspecialistspc.com/physicians/dr-matthew-farrugia/" target="_blank" rel="noopener noreferrer">Dr. Matthew Farrugia, DO</a> ─ Novi, MI</li>
             <li><a class="link" href="https://doctors.intermountainhealth.org/provider/jonathan-l-hatch/2555758" target="_blank" rel="noopener noreferrer">Dr. Jonathan Hatch, MD</a> ─ Murray, UT</li>
+            <li><a class="link" href="https://www.theearcenter.com/about/" target="_blank" rel="noopener noreferrer">Dr. Ronen Nazarian, MD</a> ─ Beverly Hills, CA</li>
         </ul>
         <li><strong>Belgium:</strong></li>
         <ul>
             <li><a class="link" href="https://www.mariamiddelares.be/en/physicians/michael-boedts" target="_blank" rel="noopener noreferrer">Dr. Michael Boedts</a> ─ Ghent, BE</li>
         </ul>
+        </ul>
+              <div class="page-break" aria-hidden="true"></div>
+       <h1>Middle Ear Anatomy</h1>
+       <p>
     </article>
   </main>
   
