--- a/tinnitus.html
+++ b/tinnitus.html
@@ -211,6 +211,7 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
       combination with other therapies, such as sound therapy or counseling, to enhance overall quality of life.
     </p>
 
+    <p>
     <h2>Key Features</h2>
     <ul class="features">
       <li>Helps patients identify and modify negative thoughts and beliefs about tinnitus or sound sensitivity.</li>
@@ -223,6 +224,7 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
       <li>Evidence shows CBT can significantly reduce tinnitus-related distress even if the perceived sound remains unchanged.</li>
     </ul>
 
+    </p>
 
       <div class="page-break" aria-hidden="true"></div>
       <h1>On Dr. Pawel Jastreboff</h1>
@@ -234,7 +236,7 @@ outcomes can vary and that rigorous, large-scale studies supporting its efficacy
   unsubstantiated by compelling evidence.
 </p>
 <p>
-Every member of the <i>Hyperacusis Guide</i> team suffers from varying degrees of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of tinnitus retraining therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
+Every member of the <i>Hyperacusis Guide</i> team suffers from varying degrees of hyperacusis, noxacusis (pain hyperacusis), and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of tinnitus retraining therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
 </p>
 
 <p>
@@ -295,8 +297,15 @@ The severity of hyperacusis and tinnitus cannot currently be measured through ob
        <img src="Jastreboff/27.jpeg" class="full-width-image">
        <img src="Jastreboff/28.jpeg" class="full-width-image">
     </p>
- 
+
+      <div class="page-break" aria-hidden="true"></div>
+      <h1>A Tribute to Those Lost</h1>
+
+    <p>
+ For some individuals, the experience of severe hyperacusis and tinnitus can become overwhelmingly distressing, reaching a point where the emotional and physical burden feels unbearable. In tragic cases, this has led some to take their own lives. The <a class="link" href="https://brewoods.wixsite.com/hyperacusismemorial" target="_blank" rel="noopener noreferrer">Hyperacusis Wall of Remembrance</a> serves as a solemn tribute to those lost, illustrating the profound impact these conditions can have and underscoring the urgent need for greater understanding, compassion, and research.
+ </p>
 </article>
+<a href="#top" class="back-to-top" aria-label="Back to top"></a>
   </main>
   
   <script src="script.js"></script>
