--- a/imaging.html
+++ b/imaging.html
@@ -32,6 +32,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
+  <a id="top"></a> 
+
   <header>
     <h1 class="logo">
     <img src="logo.png" class="logo-image">
@@ -61,6 +64,7 @@
 
 
   <main>
+
     <article>
       <h1>Medical Imaging</h1>
       
@@ -99,6 +103,8 @@
 </ul>
 <i>High-resolution temporal bone CT is a very common study and nearly every hospital and imaging center has a standardized protocol for this exam. Any ENT specialist should be able to order this exam, however, after the imaging is completed you will likely need referal to a highly-specialized ENT with experience treating hyperacusis ─ ideally with expertise in the Silverstein Procedure.</i>
     </article>
+
+<a href="#top" class="back-to-top" aria-label="Back to top"></a>
   </main>
 
   <script src="script.js"></script>
